Kubernetes/Resources/server/overlays/prod/overlay.yaml
# For prod, we want a clusterIP
apiVersion: v1
kind: Service
metadata:
  name: digitaloceanchallengeserver
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: websocket
      protocol: TCP
      port: 8080
      targetPort: 8080
