Kubernetes/Resources/server/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: serveringress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /publishMessage
            pathType: Prefix
            backend:
              service:
                name: digitaloceanchallengeserver
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: serveringressws
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /webSocket
            pathType: Prefix
            backend:
              service:
                name: digitaloceanchallengeserver
                port:
                  number: 8080
